<?xml version="1.0"?>
<package format="2">
  <name>russell_fireworks_bringup</name>
  <version>0.0.0</version>
  <description>The russell_fireworks_bringup package</description>

  <maintainer email="davesarmoury@gmail.com">Dave Niewinski</maintainer>

  <license>CC-BY-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>kuka_rsi_hw_interface</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

</package>
